--- a/app/src/main/res/layout/activity_candidate_list.xml
+++ b/app/src/main/res/layout/activity_candidate_list.xml
@@ -6,4 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".CandidateListActivity">
 
+    <TextView
+        android:id="@+id/TopHeading_Candidate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:text="@string/CandidateHeading"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="130dp" />
+
+    <LinearLayout
+        android:id="@+id/FragmentFrame"
+        android:layout_width="350dp"
+        android:layout_height="500dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
