--- a/app/src/main/res/layout/activity_dont_come_here.xml
+++ b/app/src/main/res/layout/activity_dont_come_here.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".dontComeHere">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:text="Tuhje bola tha ya mat aana bsdk wala shamo"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
