--- a/app/src/main/res/layout/fragment_voter.xml
+++ b/app/src/main/res/layout/fragment_voter.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/VoterRollNumber"
+            android:id="@+id/voterRollNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -47,7 +47,7 @@
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/VoterRollNumber" />
+            app:layout_constraintTop_toBottomOf="@+id/voterRollNumber" />
 
         <Button
             android:id="@+id/LoginButton_Voter"
